minio/minio-depoyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio
  labels:
    app: minio
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
      - name: minio
        image: minio/minio
        args:
        - server
        - /export
        resources: {}
        volumeMounts:
        - mountPath: /export
          name: minio
      restartPolicy: Always
      volumes:
      - name: minio
        hostPath:
          path: /btrfs/data/volumes/default/minio
